src/theme/app.scss
// Import the typography styles.
//
// MDC Typography
//
@use '@material/typography/mdc-typography';

html,
body {
	padding: 0;
	margin: 0;
	font-family: 'Courier New', Courier, monospace;
}

.container {
	margin:auto;
	width:-webkit-fill-available;
}

// .mdc-top-app-bar {
// 	background-color: #8CBA80;
// }

.secondaryButton {
	background-color: #8CBA80;
}

.mdc-banner__content {
  max-width: 100% !important;
}

body.mdc-dialog-scroll-lock {
    overflow: inherit;
}

.mdc-menu-surface--is-open-below {
	height: 250px;
}

.mdc-dialog__surface{
	height:75%;
}

#large-scroll-content .mdc-dialog__content{
	height:-webkit-fill-available;
}

.mdc-text-field--label-floating{
	width: 75% !important;
}

.mdc-menu-surface--is-open-below{
	width:75% !important;
}

.smui-autocomplete__menu {
	min-width: 100% !important;
}

.mdc-dialog__surface{
	height: fit-content;
}

.container{
	font-size: small;
}

